refactor: TalentProofService changed design